fix(recipes): do not inject ACTIVE state into bare processDefinitionKey list chains
The new processDefinitionKey(...).list() builder spec no longer adds a
hard-coded ProcessInstanceState.ACTIVE filter when the source chain itself
did not contain .active(). This preserves Camunda 7 semantics where
omitting .active() includes suspended instances. Updated expected outputs in
ReplaceProcessInstanceQueryMethodsTest and JavaDelegateWithClientQueryRecipesTest.

related to #2085